src/objects/Alsur_Baskets_Returned__c.object
<CustomObject>
    <fields>
        <fullName>Basket__c</fullName>
        <label>Basket</label>
        <referenceTo>Basket__c</referenceTo>
        <relationshipLabel>Alsur Baskets Returned</relationshipLabel>
        <relationshipName>Alsur_Baskets_Returned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coophsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASOAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aproborca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si se puede</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ofimovil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gran Tescual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_By__c</fullName>
        <label>Returned By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Alsur Baskets Returned</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Alsur Baskets Returned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alsur Baskets Returned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>